# polyglot-ipfs-uploader

./: .gitignore  README.md
assets/: 1.json
go/: .gitignore  go.mod  go.sum  main.go  main.go.bak
go/output/collection_20250726_160112/metadata/: 1.json
go/output/collection_20250726_160334/metadata/: 2
python/: .gitignore  main.py  pyproject.toml  pyrightconfig.json
python/output/IMG_20210626_180340/: IMG_20210626_180340.json
python/output/collection_20250724_213845/metadata/: 1.json
python/output/collection_20250726_154609/metadata/: 3
rust/: .gitignore  Cargo.toml
rust/docs/: readme.md
rust/examples/: cli_uploader.rs  library_uploader.rs
rust/src/: lib.rs  main.rs
typescript/: package.json  tsconfig.json
typescript/src/: index.ts
