[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[[example]]
name = "cli_uploader"
path = "examples/cli_uploader.rs"

[[example]]
name = "library_uploader"
path = "examples/library_uploader.rs"


[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
futures = "0.3.31"
ipfs-api-backend-hyper = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }
walkdir = "2.5.0"


